5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1635_2446.log
== TEST (2019-04-10 01:51:52) 
-- CODE:
num = int(input("Digite uma senha "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print ("senha invalida")
else:
	print
	print("acesso liberado")




-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:51:59) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print ("senha invalida")
else:
	print
	print("acesso liberado")




-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:52:05) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print ("senha invalida")
else:
	print
	print("acesso liberado")




-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 01:52:16) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print ("senha invalida")
else:
	print
	print("acesso liberado")




-- EXECUTION TIME:
0.133114
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:52:25) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print ("senha invalida")
else:
	print("acesso liberado")




-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:52:34) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print ("senha invalida")
else:
	print("acesso liberado")




-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 01:52:39) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print ("senha invalida")
else:
	print("acesso liberado")




-- EXECUTION TIME:
0.135281
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:53:01) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print ("senha invalida")
else:
	print("acesso liberado")




-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:54:42) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	msg = "invalida"
else:
	msg = "liberado"
	
print "Acesso" + msg
print(msg)



-- ERROR:
File "XXXX", line 14
    print "Acesso" + msg
                 ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Acesso" + msg)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:55:03) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	msg = "invalida"
else:
	msg = "liberado"
	
print ("Acesso") + msg
print(msg)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print ("Acesso") + msg
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:57:14) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:58:58) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) = 0):
	print("acesso liberado")
else:
	print("senha invalida")


-- ERROR:
File "XXXX", line 9
    if((d2 + d4 + d6 ) % (d1 + d3 + d5) = 0):
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:59:16) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("acesso liberado")
else:
	print("senha invalida")


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:00:16) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:00:27) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:01:05) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:01:14) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:01:21) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:01:30) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:02:00) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:02:05) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:02:09) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:02:28) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:02:56) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:03:04) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:04:21) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:04:56) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:05:04) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:05:19) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
	
	


-- EXECUTION TIME:
0.130905
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:07:30) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:07:36) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:07:57) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5)== 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:08:38) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) = 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- ERROR:
File "XXXX", line 9
    if((d2 + d4 + d6 ) % (d1 + d3 + d5) = 0):
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:08:43) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:08:51) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) == 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- EXECUTION TIME:
0.17366
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:09:31) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:09:40) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- EXECUTION TIME:
0.120194
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:10:51) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//1000000
d2 = (num//100000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:10:58) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//1000000
d2 = (num//100000) % 10
d3 = (num//10000) % 10
d4 = (num//1000) % 10
d5 = (num//100) % 10 
d6 = (num//10) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:11:30) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//1000) % 10
d4 = (num//100) % 10
d5 = (num//10) % 10 
d6 = (num//1) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:11:36) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//1000) % 10
d4 = (num//100) % 10
d5 = (num//10) % 10 
d6 = (num//1) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:11:44) 
-- CODE:
num = int(input("Digite uma senha: "))
d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//1000) % 10
d4 = (num//100) % 10
d5 = (num//10) % 10 
d6 = (num//1) % 10

if((d2 + d4 + d6 ) % (d1 + d3 + d5) != 0):
	print("senha invalida")
else:
	print("acesso liberado")
	
	
	


-- EXECUTION TIME:
0.138434
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
